--- a/templates/themes/base_visitor.html.twig
+++ b/templates/themes/base_visitor.html.twig
@@ -59,7 +59,7 @@
                             <a class="nav-link active" aria-current="page" href="#">Connexion</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Inscription</a>
+                            <a class="nav-link" href="{{path('app_register')}}">Inscription</a>
                         </li>
                     </ul>
                 </div>
