--- a/templates/pages/visitor/registration/register.html.twig
+++ b/templates/pages/visitor/registration/register.html.twig
@@ -7,7 +7,7 @@
         <meta name="description" content="Inscrivez-vous pour commenter et aimer des articles interessants">
 
         <meta name="robots" content="index, follow">
-        <meta name="author" content="Jean Dupont">
+        <meta name="author" content="ogougerot">
         <meta name="publisher" content="DWWM">
 
         {# Google font #}
@@ -112,10 +112,10 @@
                     {{form_end(registrationForm)}}
 
                     {# Links #}
-                    {# <div class="text-center mt-3">
+                    <div class="text-center mt-3">
                         <p>Vous avez déjà un compte? <a href="{{path('app_login')}}">Connectez-vous</a></p>
                         <p><a href="{{path('app_visitor_welcome')}}">Retour à l'accueil</a></p>
-                    </div> #}
+                    </div>
                 </div>
             </div>
         </div>
