--- a/templates/themes/base_visitor.html.twig
+++ b/templates/themes/base_visitor.html.twig
@@ -55,12 +55,18 @@
                         </li>
                     </ul>
                     <ul class="navbar-nav ms-auto">
+                        {% if app.user %}
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Connexion</a>
+                            <a class="nav-link active" aria-current="page" href="{{path('app_logout')}}">Deconnexion</a>
+                        </li>
+                        {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="{{path('app_login')}}">Connexion</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{path('app_register')}}">Inscription</a>
                         </li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
