reset_password_done

--- a/templates/pages/visitor/authentication/login.html.twig
+++ b/templates/pages/visitor/authentication/login.html.twig
@@ -71,8 +71,7 @@
                                 </label>
                             </div>
                             <div class="col-md-6 text-md-end my-1">
-                                <a href="#">Mot de passe oublié?</a>
-                                {# <a href="{{path('app_forgot_password_request')}}">Mot de passe oublié?</a> #}
+                                <a href="{{path('app_forgot_password_request')}}">Mot de passe oublié?</a>
                             </div>
                         </div>
 
