--- a/templates/themes/base_visitor.html.twig
+++ b/templates/themes/base_visitor.html.twig
@@ -56,9 +56,20 @@
                     </ul>
                     <ul class="navbar-nav ms-auto">
                         {% if app.user %}
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{{path('app_logout')}}">Deconnexion</a>
-                        </li>
+                            {% if is_granted('ROLE_ADMIN') %}
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="{{path('app_admin_home')}}">Espace admin</a>
+                            </li>
+                            {% endif %}
+                                {% if is_granted('ROLE_ADMIN') %}
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="{{path('app_user_home')}}">Espace utilisateur</a>
+                            </li>
+                            {% endif %}
+
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="{{path('app_logout')}}">Deconnexion</a>
+                            </li>
                         {% else %}
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="{{path('app_login')}}">Connexion</a>
