--- a/templates/themes/base_admin.html.twig
+++ b/templates/themes/base_admin.html.twig
@@ -183,8 +183,7 @@
 									</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link d-flex align-items-center gap-2 text-dark" href="#">
-									{# <a class="nav-link d-flex align-items-center gap-2 text-dark" href="{{path('app_admin_category_index')}}"> #}
+									<a class="nav-link d-flex align-items-center gap-2 text-dark" href="{{path('app_admin_category_index')}}">
                                         <i class="fa-solid fa-folder"></i>
                                         Catégories
 									</a>
