user_roles_managment_done

--- a/templates/pages/visitor/community/index.html.twig
+++ b/templates/pages/visitor/community/index.html.twig
@@ -5,5 +5,15 @@
 {% block description %}Retrouver les réseaux de la communauté{% endblock %}
 
 {% block main %}   
+</div>
     <h1 class="text-center my-3 display-5">Retrouver les réseaux de la communauté</h1>
+</div>
+<div class="text-center community-links">
+    <h3>Rejoignez notre communauté sur discord !</h3>
+    <a href="https://discord.gg/P6CqRBhM" 
+       target="_blank" 
+       class="discord-link btn btn-primary">
+        <i class="fab fa-discord"></i> Rejoindre Discord
+    </a>
+</div>
 {% endblock %}
