--- a/templates/themes/base_admin.html.twig
+++ b/templates/themes/base_admin.html.twig
@@ -201,15 +201,7 @@
 									</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link d-flex align-items-center gap-2 text-dark" href="#">
-									{# <a class="nav-link d-flex align-items-center gap-2 text-dark" href="{{path('app_admin_contact_index')}}"> #}
-                                        <i class="fa-solid fa-address-book"></i>
-										Contacts
-									</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link d-flex align-items-center gap-2 text-dark" href="#">
-									{# <a class="nav-link d-flex align-items-center gap-2 text-dark" href="{{path('app_admin_user_index')}}"> #}
+									<a class="nav-link d-flex align-items-center gap-2 text-dark" href="{{path('app_admin_user_index')}}">
                                         <i class="fa-solid fa-users"></i>
                                         Utilisateurs
 									</a>
@@ -231,13 +223,6 @@
 									{# <a class="nav-link d-flex align-items-center gap-2 text-dark" href="{{path('app_admin_profile_index')}}"> #}
                                         <i class="fa-solid fa-user"></i>
 										Mon profil
-									</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link d-flex align-items-center gap-2 text-dark" href="#">
-									{# <a class="nav-link d-flex align-items-center gap-2 text-dark" href="{{path('app_admin_setting_index')}}"> #}
-                                        <i class="fa-solid fa-gear"></i>
-										Paramètres
 									</a>
 								</li>
 							</ul>
