admin_user_profile_done

--- a/templates/themes/base_admin.html.twig
+++ b/templates/themes/base_admin.html.twig
@@ -219,8 +219,7 @@
 							
 							<ul class="nav flex-column mb-auto">
 								<li class="nav-item">
-									<a class="nav-link d-flex align-items-center gap-2 text-dark" href="#">
-									{# <a class="nav-link d-flex align-items-center gap-2 text-dark" href="{{path('app_admin_profile_index')}}"> #}
+									<a class="nav-link d-flex align-items-center gap-2 text-dark" href="{{path('app_admin_profile_index')}}">
                                         <i class="fa-solid fa-user"></i>
 										Mon profil
 									</a>
