--- a/templates/themes/base_user.html.twig
+++ b/templates/themes/base_user.html.twig
@@ -45,8 +45,7 @@
                             <a class="nav-link active" aria-current="page" href="{{path('app_user_home')}}">Accueil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Mon profil</a>
-                            {# <a class="nav-link" aria-current="page" href="{{path('app_user_profile_index')}}">Mon profil</a> #}
+                            <a class="nav-link" aria-current="page" href="{{path('app_user_profile_index')}}">Mon profil</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="{{path('app_admin_home')}}">Espace admin</a>
