content_welcome_page_done

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -9,5 +9,9 @@
 // Base
 @import "./base/typography";
 
+// Components
+@import "./components/visitor/header_visitor";
+
 // Themes
 @import "./themes/base_visitor";
+@import "./themes/base_user";
