--- a/assets/styles/base/_typography.scss
+++ b/assets/styles/base/_typography.scss
@@ -1,10 +1,13 @@
 * {
-    font-family: "Pacifico", cursive;
-    font-weight: 400;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: weight;
     font-style: normal;
 }
+
 .navbar-brand {
-    font-family: "Playfair Display", serif;
+    font-family: "Oswald", sans-serif;
     font-optical-sizing: auto;
+    font-weight: weight;
     font-style: normal;
 }
