--- a/templates/themes/base_user.html.twig
+++ b/templates/themes/base_user.html.twig
@@ -10,10 +10,10 @@
         <meta name="author" content="ogougerot">
         <meta name="publisher" content="DWWM">
 
-        {# Google font #}
+        {# Google Fonts #}
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 
         {# Favicon #}
         <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
@@ -35,7 +35,7 @@
         {# Navbar #}
         <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="{{path('app_visitor_welcome')}}">OG</a>
+                <a class="navbar-brand" href="{{path('app_visitor_welcome')}}">Screen|Verse</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
