--- a/templates/themes/base_visitor.html.twig
+++ b/templates/themes/base_visitor.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{% block title %}{% endblock %} ogougerot_blog</title>
+        <title>{% block title %}{% endblock %} Screen|Verse</title>
         <meta name="description" content="{% block description %}{% endblock %}">
 
         <meta name="robots" content="index, follow">
@@ -33,9 +33,9 @@
     </head>
     <body class="body-visitor">
         {# NavBar #}
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="{{path('app_visitor_welcome')}}">ogougerot_blog</a>
+                <a class="navbar-brand" href="{{path('app_visitor_welcome')}}">Screen|Verse</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -58,24 +58,24 @@
                         {% if app.user %}
                             {% if is_granted('ROLE_ADMIN') %}
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="{{path('app_admin_home')}}">Espace admin</a>
+                                <a class="my-1 mx-lg-2 btn btn-outline-primary shadow" aria-current="page" href="{{path('app_admin_home')}}">Espace admin</a>
                             </li>
                             {% endif %}
                                 {% if is_granted('ROLE_ADMIN') %}
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="{{path('app_user_home')}}">Espace utilisateur</a>
+                                <a class="my-1 mx-lg-2 btn btn-outline-primary shadow" aria-current="page" href="{{path('app_user_home')}}">Espace utilisateur</a>
                             </li>
                             {% endif %}
 
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="{{path('app_logout')}}">Deconnexion</a>
+                                <a class="my-1 mx-lg-2 btn btn-primary shadow" aria-current="page" href="{{path('app_logout')}}">Deconnexion</a>
                             </li>
                         {% else %}
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{{path('app_login')}}">Connexion</a>
+                            <a class="my-1 mx-lg-2 btn btn-outline-primary shadow" aria-current="page" href="{{path('app_login')}}">Connexion</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{path('app_register')}}">Inscription</a>
+                            <a class="my-1 mx-lg-2 btn btn-primary shadow" href="{{path('app_register')}}">Inscription</a>
                         </li>
                         {% endif %}
                     </ul>
