content_blog_page_tag_done

--- a/templates/pages/visitor/blog/index.html.twig
+++ b/templates/pages/visitor/blog/index.html.twig
@@ -92,7 +92,7 @@
 
                 {# display navigation #}
                 <div class="d-flex justify-content-end align-items-center">
-                    {{ knp_pagination_render(posts) }}
+                    {# {{ knp_pagination_render(posts) }} #}
                 </div>
             </div>
         </div>
