--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -12,6 +12,9 @@
 // Components
 @import "./components/visitor/header_visitor";
 
+// Pages
+@import "./pages/visitor/blog/show";
+
 // Themes
 @import "./themes/base_visitor";
 @import "./themes/base_user";
