--- a/templates/themes/base_visitor.html.twig
+++ b/templates/themes/base_visitor.html.twig
@@ -30,6 +30,9 @@
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
+
+        {% block knp_paginator_rel_links %}{% endblock %}
+        
     </head>
     <body class="body-visitor">
         {# NavBar #}
