--- a/templates/themes/base_admin.html.twig
+++ b/templates/themes/base_admin.html.twig
@@ -207,8 +207,7 @@
 									</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link d-flex align-items-center gap-2 text-dark" href="#">
-									{# <a class="nav-link d-flex align-items-center gap-2 text-dark" href="{{path('app_admin_comment_index')}}"> #}
+									<a class="nav-link d-flex align-items-center gap-2 text-dark" href="{{path('app_admin_comment_index')}}">
                                         <i class="fa-solid fa-comments"></i>
                                         Commentaires
 									</a>
