dashboards_managment_done

--- a/templates/pages/user/home/index.html.twig
+++ b/templates/pages/user/home/index.html.twig
@@ -13,7 +13,7 @@
                 <div class="card text-bg-light mb-3">
                     <div class="card-header">Liste des commentaires</div>
                     <div class="card-body">
-                        {# <p class="card-title">{{ app.user.comments|length }}</p> #}
+                        <p class="card-title">{{ app.user.comments|length }}</p>
                     </div>
                 </div>
             </div>
@@ -21,7 +21,7 @@
                 <div class="card text-bg-light mb-3">
                         <div class="card-header">Liste des likes</div>
                         <div class="card-body">
-                            {# <p class="card-title">{{ app.user.likes|length }}</p> #}
+                            <p class="card-title">{{ app.user.likes|length }}</p>
                         </div>
                     </div>
                 </div>
