--- a/templates/themes/base_visitor.html.twig
+++ b/templates/themes/base_visitor.html.twig
@@ -99,7 +99,7 @@
         
         {# Footer #}
         <footer class="text-center">
-            <span>DWWM</span>
+            {# <span>DWWM</span> #}
         </footer>
     </body>
 </html>
